--- a/app/src/main/res/layout/activity_show_message_new.xml
+++ b/app/src/main/res/layout/activity_show_message_new.xml
@@ -7,18 +7,19 @@
     <RelativeLayout
         android:id="@+id/rl_show"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/banner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"/>
-<!--        <com.youth.banner.Banner-->
-<!--            android:id="@+id/banner"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:visibility="gone" />-->
+            android:visibility="gone" />
+        <!--        <com.youth.banner.Banner-->
+        <!--            android:id="@+id/banner"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:visibility="gone" />-->
 
         <com.zhdj.zhdj.view.weight.FullScreen
             android:id="@+id/video_view"
@@ -40,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/iv_background"
@@ -56,8 +57,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_main_logo" />
+            android:scaleType="fitXY" />
 
         <LinearLayout
             android:id="@+id/ll_time"
