--- a/app/src/main/res/layout/activity_show_message_new.xml
+++ b/app/src/main/res/layout/activity_show_message_new.xml
@@ -28,12 +28,12 @@
             android:layout_centerInParent="true"
             android:visibility="gone" />
 
-        <WebView
-            android:id="@+id/web_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
+<!--        <WebView-->
+<!--            android:id="@+id/web_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:visibility="gone" />-->
     </RelativeLayout>
 
     <RelativeLayout
