--- a/app/src/main/res/layout/activity_show_message_new.xml
+++ b/app/src/main/res/layout/activity_show_message_new.xml
@@ -16,11 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone" />
-        <!--        <com.youth.banner.Banner-->
-        <!--            android:id="@+id/banner"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:visibility="gone" />-->
 
         <com.zhdj.zhdj.view.weight.FullScreen
             android:id="@+id/video_view"
@@ -29,12 +24,26 @@
             android:layout_centerInParent="true"
             android:visibility="gone" />
 
-<!--        <WebView-->
-<!--            android:id="@+id/web_view"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_centerInParent="true"-->
-<!--            android:visibility="gone" />-->
+        <!--        <WebView-->
+        <!--            android:id="@+id/web_view"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_centerInParent="true"-->
+        <!--            android:visibility="gone" />-->
+
+        <TextView
+            android:id="@+id/tv_pos"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/colorWhite"
+            android:textColor="@color/colorRed"
+            android:textSize="14sp" />
+
     </RelativeLayout>
 
     <RelativeLayout
